--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,8 @@
 // Начните писать стили здесь
+@import url("global/normalize.scss");
+@import url("global/fonts.scss");
+@import url("global/variables.scss");
+@import url("global/mixins.scss");
+@import url("global/common.scss");
+@import url("blocks/visually__hidden.scss");
+@import url("blocks/page-header.scss");
