--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -7,3 +7,17 @@
   color: $basic-black;
   text-transform: uppercase;
 }
+
+.site-list__item a,
+.site-list__item a {
+  opacity: 0.6;
+}
+
+.site-list__item a {
+  opacity: 0.3;
+}
+
+.site-list__item--active {
+  border-bottom: 2px solid $basic-light-green;
+
+}
