--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -8,12 +8,12 @@
   text-transform: uppercase;
 }
 
-.site-list__item a,
-.site-list__item a {
+.site-list__item a:hover,
+.site-list__item a:focus {
   opacity: 0.6;
 }
 
-.site-list__item a {
+.site-list__item a:active {
   opacity: 0.3;
 }
 
