--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,15 @@
 // Начните писать стили здесь
-@import url("global/normalize.scss");
-@import url("global/fonts.scss");
-@import url("global/variables.scss");
-@import url("global/mixins.scss");
-@import url("global/common.scss");
-@import url("blocks/visually__hidden.scss");
-@import url("blocks/page-header.scss");
+@import "global/normalize.scss";
+@import "global/fonts.scss";
+@import "global/variables.scss";
+@import "global/mixins.scss";
+@import "global/common.scss";
+@import "blocks/visually-hidden.scss";
+@import "blocks/page-header.scss";
+@import "blocks/site-list.scss";
+@import "blocks/slogan.scss";
+@import "blocks/programs.scss";
+@import "blocks/functioning.scss";
+@import "blocks/example.scss";
+@import "blocks/contacts.scss";
+@import "blocks/copyright.scss";
