--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,7 +9,8 @@ $basic-light-dark-gray: #666666;
 $basic-dark-gray: #444444;
 $basic-dark-dark-gray: #222222;
 $basic-error-pink: #FF8282;
-
-
+$border-light-grey: #E7E7E7;
+$border-grey: #CDCDCD;
+$purpose-gray: #BABABA;
 
 $font-size: 45px;
