--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,11 @@
 @import "blocks/example.scss";
 @import "blocks/contacts.scss";
 @import "blocks/copyright.scss";
+@import "blocks/page-main.scss";
+@import "blocks/personal-data.scss";
+@import "blocks/purpose.scss";
+@import "blocks/contacts-forms.scss";
+@import "blocks/comments.scss";
+@import "blocks/additionally.scss";
+@import "blocks/button.scss";
+
