Стилизация страницы каталога

--- a/source/sass/blocks/purpose.scss
+++ b/source/sass/blocks/purpose.scss
@@ -4,7 +4,7 @@
   font-size: 16px; //* В Форме размер один в стайлгаде другой//
   line-height: 18px;
   text-transform: uppercase;
-  color: $basic-dark-dark-gray;
+  color: $basic-more-dark-gray;
 }
 
 .purpose__input {
