--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -3,15 +3,15 @@
   font-family: "Oswald";
   font-style: normal;
   font-weight: 400;
-  src: local("Oswald"),
+  src:
     url("/fonts/oswaldregular.woff2") format("woff2"),
     url("/fonts/oswaldregular.woff") format("woff");
 }
 @font-face {
   font-family: "Oswald";
   font-style: normal;
-  font-weight: 600;
-  src: local("Oswald"),
+  font-weight: 500;
+  src:
     url("/fonts/oswaldmedium.woff2") format("woff2"),
     url("/fonts/oswaldmedium.woff") format("woff");
 }
