--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,4 +1,5 @@
 $basic-black:#000000;
+$basic-light-black:#111111;
 $basic-white:#ffffff;
 $basic-light-green:#68B738;
 $basic-green:#5EAA2F;
@@ -7,7 +8,7 @@ $basic-grey: #EBEBEB;
 $basic-dark-grey: #CDCDCD;
 $basic-light-dark-gray: #666666;
 $basic-dark-gray: #444444;
-$basic-dark-dark-gray: #222222;
+$basic-more-dark-gray: #222222;
 $basic-error-pink: #FF8282;
 $border-light-grey: #E7E7E7;
 $border-grey: #CDCDCD;
