--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,4 +20,9 @@
 @import "blocks/comments.scss";
 @import "blocks/additionally.scss";
 @import "blocks/button.scss";
-
+@import "blocks/catalog.scss";
+@import "blocks/product.scss";
+@import "blocks/table.scss";
+@import "blocks/show-more.scss";
+@import "blocks/additional-goods.scss";
+@import "blocks/souvenir.scss";
